2010-08-24  Kent Tamura  <tkent@chromium.org>

Reviewed by Pavel Feldman.

        [DRT/Chromium] Fix 26 inspector test crashes
        https://bugs.webkit.org/show_bug.cgi?id=44580

        * platform/chromium/drt_expectations.txt:
2010-08-24  Kent Tamura  <tkent@chromium.org>

        Reviewed by Pavel Feldman.

        [DRT/Chromium] Fix 26 inspector test crashes
        https://bugs.webkit.org/show_bug.cgi?id=44580

        - DRTDevToolsAgent has a reference to the main WebView. So we
          should not clear it in closeDevTools() and should clear it in
          ~TestShell().
        - DRTDevToolsClient has a reference to a DevTools WebView and no
          way to update it. So we should delete DRTDevToolsClient instances
          in closeDevTools().

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::~TestShell):
        (TestShell::closeDevTools):

Canonical link: https://commits.webkit.org/56767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65988 268f45cc-cd09-0410-ab3c-d52691b4dbfc